--- a/index.html
+++ b/index.html
@@ -1,31 +1,56 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en-us">
+
 <head>
-	<title>Bootstrap Bio</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">;
+  <meta charset="UTF-8">
+  <title>About | Your Name</title>
+  <!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
 
 <body>
 
-<header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Jean-Philip</a>
-		<nav class="navbar navbar-default">
-		  <div class="container-fluid">
-		    <div class="navbar-header">
-		      <a class="navbar-brand" href="#">WebSiteName</a>
-		    </div>
-		    <ul class="nav navbar-nav">
-		      <li class="active"><a href="#">Home</a></li>
-		      <li><a href="#">Page 1</a></li>
-		      <li><a href="#">Page 2</a></li>
-		      <li><a href="#">Page 3</a></li>
-		    </ul>
-		  </div>
-		</nav>
-	    </div>
+	<div class="container">
+
+	  <header id="masthead">
+	  <ul class="nav navbar-nav navbar-left">
+	  <li role="presentation" class="active"><a href="#">About</a></li>
+	  <li role="presentation"><a href="#">Protfolio</a></li>
+	  <li role="presentation"><a href="#">Contact</a></li>
+  	  </ul>
   </header>
 
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
 
+      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
 
+      <p>Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
+
+      <p>Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
+
+    </section>
+
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
+        <div class="row">
+		  <div class="col-xs-3 col-sm-1">
+		    <a href="#" class="social"><img src="assets/images/github-128.png" alt="GitHub">
+		    <a href="#" class="social"><img src="assets/images/linkedin-128.png" alt="LinkedIn">
+		    <a href="#" class="social"><img src="assets/images/stackoverflow-128.png" alt="Stack Overflow">
+		    </a>
+      </div>
+    </section>
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 2016 Your Name
+    </div>
+  </footer>
 </body>
+
 </html>
